tests/reference/run-atomic_01_cc-8254b31.stderr
semantic error: Atomic operations are not supported yet
 --> tests/errors/atomic_01_cc.f90:4:5
  |
4 |     call atomic_add (atom[1], this_image())
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Atomic operations are not supported yet
 --> tests/errors/atomic_01_cc.f90:5:5
  |
5 |     call atomic_add (atom[2], this_image())
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
